# nanorlm

./: .gitignore  AGENTS.example.md  AGENTS.md  CLAUDE.example.md  CLAUDE.md  README.md  ROADMAP.example.md  UV.md  bench.py  nanorlm.py  policies.py  pyproject.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  dependency-review.yml  smoke.yml
examples/: benchmark_snapshot.md  pairbench_trace.txt  run_dossiers.py  run_needlepairs.py  run_planning.py  run_verifiers.py  verifiers_20.json  verifiers_30.json
examples/real_runs/openai_external_mini/: benchmark_snapshot.md
examples/real_runs/openai_ruler_small/: benchmark_snapshot.md
scripts/: prepare_ruler_external_jsonl.py  run_benchmark_e2e.py
showcases/: README.md  __init__.py  generate_assets.py  planning.py  planning_tasks.json
showcases/assets/dossierbench/: benchmark_snapshot.md  manifest.json
tests/: test_backends.py  test_benchmark_e2e.py  test_nanorlm.py  test_policies.py  test_showcases.py
tests/fixtures/: external-benchmark-mini.jsonl  verifiers_smoke.json
tests/fixtures/verifiers-mini/: README.md
tests/fixtures/verifiers-mini/docs/: evaluation.md
tests/fixtures/verifiers-mini/verifiers/scripts/: eval.py
