[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nanorlm"
version = "0.1.0"
description = "Minimal recursive language model reference implementation with pluggable retention policies."
readme = "README.md"
requires-python = ">=3.11,<3.13"
authors = [
  { name = "Alexandre Robicquet" }
]
license = { text = "MIT" }

[tool.uv]
package = false
